# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//drivers/adapter/uhdf2/uhdf.gni")

ohos_shared_library("audio_renderer_sink") {
    install_enable = true

    sources = [
        "//foundation/multimedia/audio_standard/frameworks/innerkitsimpl/audiorenderer/src/audio_renderer_sink.cpp",
    ]

    cflags = ["-fPIC"]
    cflags += ["-Wall"]
    cflags_cc = cflags

    include_dirs = [
        "//foundation/multimedia/audio_standard/frameworks/innerkitsimpl/audiorenderer/include",
        "//foundation/multimedia/audio_standard/frameworks/innerkitsimpl/common/include",
        "//foundation/multimedia/media_standard/interfaces/innerkits/native/media/include",
        "//utils/native/base/include",
        "//base/hiviewdfx/hilog/interfaces/native/innerkits/include",
        "//drivers/peripheral/audio/interfaces/include",
        "//utils/native/base/include",
    ]

    public_configs = [":audio_external_library_config"]

    deps = [
        "//third_party/bounds_checking_function:libsec_static",
        "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog",
        "//utils/native/base:utils",
        "$hdf_uhdf_path/ipc:libhdf_ipc_adapter",
        "$hdf_uhdf_path/hcs:hdf_default.hcb",
        "$hdf_uhdf_path/hdi:libhdi",
        "$hdf_uhdf_path/host:hdf_devhost",
        "$hdf_uhdf_path/host:libhdf_host",
        "$hdf_uhdf_path/config:libhdf_hcs",
        "$hdf_uhdf_path/manager:hdf_devmgr.rc",
        "$hdf_uhdf_path/manager:hdf_devmgr",
        "$hdf_uhdf_path/osal:libhdf_utils",
    ]

    part_name = "multimedia_audio_standard"
    subsystem_name = "multimedia"
}

config("audio_external_library_config") {
    include_dirs = ["//foundation/multimedia/audio_standard/frameworks/innerkitsimpl/common/include"]
}
