# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/ace/ace.gni")
import("//foundation/multimedia/audio_framework/multimedia_aafwk.gni")

ohos_shared_library("audio") {
  sanitize = {
    cfi = true
    debug = false
    blocklist = "//foundation/multimedia/audio_framework/cfi_blocklist.txt"
  }
  include_dirs = [
    "audio_common/include",
    "audio_renderer/include",
    "audio_capturer/include",
    "audio_manager/include",
    "audio_stream_manager/include",
    "//foundation/multimedia/audio_framework/interfaces/kits/js/audio_manager/include",
    "//foundation/multimedia/audio_framework/interfaces/kits/js/audio_capturer/include",
    "//foundation/multimedia/audio_framework/interfaces/kits/js/audio_renderer/include",
    "//foundation/multimedia/audio_framework/interfaces/kits/js/ringtone_manager/include",
    "//foundation/multimedia/audio_framework/interfaces/kits/js/toneplayer/include",
    "//foundation/multimedia/audio_framework/interfaces/inner_api/native/audiocommon/include",
    "//foundation/multimedia/audio_framework/interfaces/inner_api/native/audioringtone/include",
    "//foundation/multimedia/audio_framework/interfaces/inner_api/native/toneplayer/include",
    "${ability_runtime_path}/interfaces/kits/native/ability/native",
    "//foundation/arkui/napi/interfaces/kits",
    "//third_party/libuv/include",
  ]

  sources = [
    "audio_capturer/src/audio_capturer_callback_napi.cpp",
    "audio_capturer/src/audio_capturer_napi.cpp",
    "audio_capturer/src/audio_parameters_napi.cpp",
    "audio_capturer/src/capturer_period_position_callback_napi.cpp",
    "audio_capturer/src/capturer_position_callback_napi.cpp",
    "audio_common/src/audio_common_napi.cpp",
    "audio_manager/src/audio_capturer_state_callback_napi.cpp",
    "audio_manager/src/audio_interrupt_manager_napi.cpp",
    "audio_manager/src/audio_manager_callback_napi.cpp",
    "audio_manager/src/audio_manager_interrupt_callback_napi.cpp",
    "audio_manager/src/audio_manager_napi.cpp",
    "audio_manager/src/audio_micstatechange_callback_napi.cpp",
    "audio_manager/src/audio_renderer_state_callback_napi.cpp",
    "audio_manager/src/audio_ringermode_callback_napi.cpp",
    "audio_manager/src/audio_routing_manager_napi.cpp",
    "audio_manager/src/audio_stream_mgr_napi.cpp",
    "audio_manager/src/audio_volume_group_manager_napi.cpp",
    "audio_manager/src/audio_volume_key_event_napi.cpp",
    "audio_manager/src/audio_volume_manager_napi.cpp",
    "audio_renderer/src/audio_renderer_callback_napi.cpp",
    "audio_renderer/src/audio_renderer_napi.cpp",
    "audio_renderer/src/renderer_data_request_callback_napi.cpp",
    "audio_renderer/src/renderer_period_position_callback_napi.cpp",
    "audio_renderer/src/renderer_position_callback_napi.cpp",
    "toneplayer/src/toneplayer_napi.cpp",
  ]

  deps = [
    "//foundation/multimedia/audio_framework/frameworks/native/audiocapturer:audio_capturer",
    "//foundation/multimedia/audio_framework/frameworks/native/audiorenderer:audio_renderer",
    "//foundation/multimedia/audio_framework/frameworks/native/toneplayer:audio_toneplayer",
    "//foundation/multimedia/audio_framework/services/audio_policy:audio_policy_client",
    "//foundation/multimedia/audio_framework/services/audio_service:audio_client",
  ]

  external_deps = [
    "ability_runtime:abilitykit_native",
    "ability_runtime:napi_base_context",
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "napi:ace_napi",
    "resource_management:global_resmgr",
  ]
  relative_install_dir = "module/multimedia"
  part_name = "multimedia_audio_framework"
  subsystem_name = "multimedia"
}
